--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   script: python setup.py install --single-version-externally-managed --record=record.txt
   skip: True  # [py2k]
 
@@ -31,6 +31,7 @@ requirements:
 test:
   imports:
     - orangecontrib.network
+    - orangecontrib.network._fr_layout
 
 about:
   home: https://github.com/biolab/orange3-network
