--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,10 +20,11 @@ requirements:
   build:
     - python
     - setuptools
-    - numpy
+    - numpy 1.11.*
 
   run:
     - python
+    - numpy >=1.11
     - orange3
     - networkx >=1.10
     - pyqtgraph >=0.9.10
