--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,10 +18,12 @@ build:
 
 requirements:
   build:
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}    
+  host:
     - python
     - setuptools
     - numpy 1.11.*
-
   run:
     - python
     - numpy >=1.11
