MNT: Re-rendered with conda-build 3.17.8, conda-smithy 3.2.12, and conda-forge-pinning 2019.01.29

--- a/.ci_support/linux_python3.6.yaml
+++ b/.ci_support/linux_python3.6.yaml
@@ -1,9 +1,11 @@
-build_number_decrement:
-- '0'
+c_compiler:
+- gcc
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- gxx
 docker_image:
 - condaforge/linux-anvil-comp7
 pin_run_as_build:
