--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
   run:
     - python
     - setuptools
-    - numpy >=1.11
+    - {{ pin_compatible('numpy') }}
     - orange3
     - networkx >=1.10
     - pyqtgraph >=0.9.10
