Installing with pip

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,13 +7,12 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
   number: 0
-  script: python setup.py install --single-version-externally-managed --record=record.txt
+  script: {{ PYTHON }} -m pip install . --no-deps -vv
   skip: True  # [py2k]
 
 requirements:
@@ -23,6 +22,7 @@ requirements:
 
   host:
     - python
+    - pip
     - setuptools
     - numpy 1.11.*
 
