Revert "Update meta.yaml"
This reverts commit 5dd54d7ebf3f456e71a770935b44cda986350172.

Revert "Update meta.yaml"

This reverts commit 298913fcbc00dc8b49458421b375e740e97ec753.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,13 +12,14 @@ source:
 
 build:
   number: 0
-  script: "{{ PYTHON }} -m pip install . -vv --single-version-externally-managed --record=record.txt"
+  script: "{{ PYTHON }} -m pip install . -vv"
   skip: True  # [py2k]
 
 requirements:
   build:
     - {{ compiler('c') }}          
     - {{ compiler('cxx') }}        
+    - {{ compiler('fortran') }}  # [osx]
 
   host:
     - python
