--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,7 +37,7 @@ test:
 
 about:
   home: https://github.com/biolab/orange3-network
-  license: GPL-3.0
+  license: GPL-3.0-only
   license_file:
     - LICENSE
     - COPYING
