--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,17 +19,17 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
-    - python
+    - python <3.10
     - pip
     - setuptools
     - cython
     - numpy >=1.16.0
   run:
-    - python
+    - python <3.10
     - anyqt
     - {{ pin_compatible('numpy') }}
     - gensim
-    - orange3 >=3.32
+    - orange3 >=3.31
     - orange-widget-base
     - scipy
     - scikit-learn
